# neuraos

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Config.in  Dockerfile  Dockerfile.buildroot  Dockerfile.drone  Dockerfile.x86_64  LICENSE  Makefile  Makefile.simple  README.md  external.desc  external.mk  kernel-actual-config  test_neuraos.sh
.github/workflows/: ci.yml
configs/: neuraos_defconfig  neuraos_minimal_defconfig  neuraos_x86_64_defconfig
configs/boards/generic_x86_64/: neuraos_x86_64_defconfig
configs/boards/jetson/: neuraos_jetson_nano_defconfig
configs/boards/raspberrypi/: neuraos_rpi4_defconfig
configs/boards/riscv/: neuraos_riscv64_defconfig
configs/kernel/: neuraos_6.12_defconfig  neuraos_defconfig  neuraos_x86_64_defconfig
docs/: COMPLETION_SUMMARY.md  GUI_BUILD.md  IMPLEMENTATION_STATUS.md  PROJECT_FINAL_REPORT.md  api_reference.md  architecture_2025.md  getting_started.md  security.md
docs/assets/: README.md
examples/: CMakeLists.txt
examples/image_classification/: CMakeLists.txt  image_classifier.c
models/nlp/: .gitkeep
package/neuraparse/apache-tvm/: Config.in  apache-tvm.mk
package/neuraparse/ardupilot/: Config.in  ardupilot.mk
package/neuraparse/asio/: Config.in  asio.mk
package/neuraparse/defense-tools/: Config.in  defense-tools.mk
package/neuraparse/emlearn/: Config.in  emlearn.mk
package/neuraparse/fast-dds/: Config.in  fast-dds.mk
package/neuraparse/fastcdr/: Config.in  fastcdr.mk
package/neuraparse/foonathan-memory/: Config.in  foonathan-memory.mk
package/neuraparse/grpc/: Config.in  grpc.mk
package/neuraparse/litert/: Config.in  litert.mk
package/neuraparse/llama-cpp/: Config.in  llama-cpp.mk
package/neuraparse/mavlink/: Config.in  mavlink.mk
package/neuraparse/mavsdk/: Config.in  mavsdk.mk
package/neuraparse/mediapipe/: Config.in  mediapipe.mk
package/neuraparse/model-optimizer/: Config.in  model-optimizer.mk
package/neuraparse/ncnn/: Config.in  ncnn.mk
package/neuraparse/neuraos-dashboard/: Config.in  neuraos-dashboard.mk
package/neuraparse/neuraos-tests/: Config.in  neuraos-tests.mk
package/neuraparse/npi-init/: Config.in  npi-init.mk
package/neuraparse/npie/: Config.in  S90npie  npie.conf  npie.mk
package/neuraparse/onnx-tools/: Config.in  onnx-tools.mk
package/neuraparse/onnxruntime/: Config.in  download-deps.sh  onnxruntime.mk
package/neuraparse/opencv-minimal/: Config.in  opencv-minimal.mk
package/neuraparse/opencv5/: Config.in  opencv5.mk
package/neuraparse/openvino/: Config.in  openvino.mk
package/neuraparse/orb-slam3/: Config.in  (+1 more)
qml/apps/: FileManagerApp.qml  WebBrowserApp.qml
qml/shell/: NotificationCenter.qml  TaskBar.qml
scripts/: build_neuraos.sh  build_x86_64.sh  create_minimal_rootfs.sh  run_qemu_gui.sh  run_qemu_headless.sh  run_qemu_kvm.sh  setup_environment.sh  start_neuraos.sh  stop_neuraos.sh  test_qemu.sh
src/: neuraos_config.h.in
src/dashboard/: CMakeLists.txt  main.cpp  neuraos-dashboard.desktop  resources.qrc
src/dashboard/backend/: aibusmanager.cpp  aibusmanager.h  aimemorymanager.cpp  aimemorymanager.h  automationmanager.cpp  automationmanager.h  commandpalette.cpp  commandpalette.h  ecosystemmanager.cpp  ecosystemmanager.h  knowledgemanager.cpp  knowledgemanager.h  mcpmanager.cpp  mcpmanager.h  networkmanager.cpp  networkmanager.h  npiebridge.cpp  npiebridge.h  npumonitor.cpp  npumonitor.h  processmanager.cpp  processmanager.h  settingsmanager.cpp  settingsmanager.h  systeminfo.cpp  systeminfo.h
src/dashboard/qml/: BottomDock.qml  Theme.qml  TopPanel.qml  main.qml
src/dashboard/qml/apps/: AIAgentHub.qml  AIAssistantApp.qml  AIBusApp.qml  AIMemoryApp.qml  AppStore.qml  AutomationStudioApp.qml  CalculatorApp.qml  CalendarApp.qml  ClockApp.qml  DefenseMonitor.qml  DroneCommandCenter.qml  EcosystemApp.qml  FileManagerApp.qml  ImageViewerApp.qml  KnowledgeBaseApp.qml  MCPHubApp.qml  MusicPlayerApp.qml  NPUControlCenter.qml  NetworkCenter.qml  NeuralStudio.qml  NotesApp.qml  PackageManager.qml  PhotosApp.qml  QuantumLab.qml  SettingsApp.qml  SystemMonitorApp.qml  TaskManagerApp.qml  TerminalApp.qml  TextEditorApp.qml  VideoPlayerApp.qml  WeatherApp.qml  WebBrowserApp.qml
src/dashboard/qml/components/: AppIcon.qml  CanvasIcon.qml  CircularGauge.qml  DesktopWidgetFrame.qml  DroneIndicator.qml  GlassCard.qml  GlassPanel.qml  IconButton.qml  MetricCard.qml  MiniChart.qml  NotificationItem.qml  ProgressBar.qml  QuantumGate.qml  RadarView.qml  SearchBar.qml  SectionHeader.qml  SliderControl.qml  StatusBadge.qml  ToastNotification.qml  ToggleSwitch.qml  qmldir
src/dashboard/qml/pages/: AIDashboard.qml  AppLauncher.qml  FileManager.qml  HomePage.qml  SettingsPage.qml  SystemMonitor.qml  TerminalPage.qml
src/dashboard/qml/shell/: CommandPalette.qml  ContextMenu.qml  Desktop.qml  NotificationCenter.qml  StartMenu.qml  TaskBar.qml  WindowFrame.qml  WindowManager.js
src/dashboard/qml/shell/widgets/: AIStatusWidget.qml  CalendarWidget.qml  ClockWidget.qml  MediaWidget.qml  QuickActionsWidget.qml  SystemStatsWidget.qml  WeatherWidget.qml
src/drivers/: CMakeLists.txt
src/drivers/accelerators/: gpu_accel.c  gpu_accel.h
src/drivers/npu/: npu_driver.c  npu_driver.h
src/libs/: CMakeLists.txt  libneura_common.c  libneura_common.h  libneura_ota.c  libneura_ota.h
src/npi/: CMakeLists.txt  npi_init.c
src/npie/: CMakeLists.txt  npie.pc.in
src/npie/api/: npie.h
src/npie/core/: npie_core.c  npie_inference.c  npie_internal.h.in  npie_model.c
src/npie/core/backends/: npie_emlearn.c  npie_litert.cpp  npie_onnx.cpp  npie_wasm.cpp
src/npie/hal/: npie_accelerator.c  npie_hal.c
src/npie/memory/: npie_memory.c
src/npie/scheduler/: npie_scheduler.c
tests/: CMakeLists.txt  quick_test.sh  system_tests.sh  test_ai_stack  test_ai_stack.c
tests/benchmarks/: CMakeLists.txt  benchmark_npie.c
tests/integration/: CMakeLists.txt  test_drivers.c  test_npie_integration.c
tests/unit/: CMakeLists.txt  test_npie_core.c
tools/: CMakeLists.txt  npconvert  npie-cli  npprofiler  npsim
tools/npie_bench/: npie_bench.c
(+33 files in other folders)
